--- a/app/src/main/res/drawable/style_borde.xml
+++ b/app/src/main/res/drawable/style_borde.xml
@@ -3,7 +3,7 @@
        android:shape="rectangle" >
     <solid android:color="@android:color/white" />
     <stroke
-            android:width="1dp"
-            android:color="@android:color/black" />
+            android:width="1.5dp"
+            android:color="@color/colorPrimary" />
     <corners android:radius="3dp"/>
 </shape>
