--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         android:background="@drawable/style_borde"
-        android:padding="1dp"
+        android:padding="1.5dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:textSize="14dp"
             android:padding="3dp"
+            android:textColor="@color/colorPrimary"
             android:layout_height="wrap_content"/>
 
     <ImageView
